# harness-manager

./: .gitignore  AGENTS.md  Cargo.toml  ITERATION_LOG.md  LESSONS_LEARNED.md  README.md  patch.diff
.Jules/: palette.md
.claude/agents/: agent-creator.md  architect.md  planner.md  ux-expert.md
.gemini/plugins/skills/: agent-creator.md  architect.md  planner.md  ux-expert.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  pages.yml  release-helper.yml
.jules/: bolt.md  sentinel.md
catalogs/seed/: antigravity.json  claude_code.json  claude_cowork.json  codex.json  codex_cli.json  copilot_cli.json  gemini_cli.json  intellij_copilot.json  opencode.json  pi_coding_agent.json
docs/compound-autopilot/plans/: 2026-05-20-add-finish-test.md
scripts/: migrate-claude-to-gemini.mjs
src/: api.rs  catalogs.rs  config.rs  domain.rs  lib.rs  main.rs  storage.rs
src/api/: inspect.rs  jobs.rs  meta.rs  mod.rs  projects.rs
src/services/: activity.rs  docs.rs  edit.rs  graph.rs  jobs.rs  jobs_test.rs  mod.rs  refs.rs  scan.rs  scan_tests.rs  validation.rs
src/services/graph/: edges.rs  metadata.rs  mod.rs  plugins.rs  util.rs
src/services/plugins/: discovery.rs
src/services/projects/: discovery.rs
src/services/refs/: config.rs  gemini.rs  generic.rs  instructions.rs  mod.rs  util.rs
src/services/scan_tests/: discovery.rs  indexing.rs  mod.rs  plugins.rs  (+1 more)
src/templates/: GEMINI.md
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/scripts/: write-build-meta.mjs
ui/src/: App.test.tsx  App.tsx  styles.css
(+35 files in other folders)
